// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`если юзер перекуп с семью днями правильно рисует компонент 1`] = `
<Modal
  animation={true}
  closer={true}
  contentClassName="OfferActivateDialog OfferActivateDialog_free_limit OfferActivateDialog_wide"
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="OfferActivateDialog__img"
  />
  <div
    className="OfferActivateDialog__title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Платное размещение",
      }
    }
  />
  <div
    className="OfferActivateDialog__text"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Вы&nbsp;уже истратили все бесплатные объявления и&nbsp;теперь можете размещаться только платно. Срок размещения — 7 дней. ",
        }
      }
    />
    <Link
      onClick={[Function]}
      target="_blank"
      url="link to \\"dealers\\" with params: {\\"section\\":\\"profi\\"}"
    >
      Подробнее
    </Link>
  </div>
  <div
    className="OfferActivateDialog__priceInfo"
  >
    <div
      className="OfferActivateDialog__priceInfoItem"
    >
      <div
        className="OfferActivateDialog__label"
      >
        Первая неделя
      </div>
      <Price
        className="OfferActivateDialog__price"
        currency="RUR"
        free="Бесплатно"
        price={2199}
        separator=" "
      />
    </div>
    <div
      className="OfferActivateDialog__priceInfoItem"
    >
      <div
        className="OfferActivateDialog__label"
      >
        Со второй недели
      </div>
      <div
        className="OfferActivateDialog__priceInfoRow"
      >
        <Price
          className="OfferActivateDialog__price"
          currency="RUR"
          postfix=" / 7 дней"
          price={1499}
          separator=" "
        />
        <span
          className="OfferActivateDialog__discount"
        >
          Выгода 
          32
          %
        </span>
      </div>
    </div>
  </div>
  <Button
    className="OfferActivateDialog__button"
    color="blue"
    onClick={[Function]}
    size="xl"
    type="button"
    width="full"
  >
    <Price
      currency="RUR"
      free="Разместить бесплатно"
      postfix=" / 7 дней"
      prefix="Разместить за "
      price={2199}
      separator=" "
    />
  </Button>
  <div
    className="OfferActivateDialog__placementProlongationText"
  >
    <span>
      Скидка действует со второй недели непрерывного размещения. 
    </span>
    <span>
      Стоимость размещения будет автоматически списываться каждые 
      7 дней
       до
       
      момента снятия объявления с продажи.
    </span>
  </div>
</Modal>
`;

exports[`правильно логирует показы васа при рендере 1`] = `
Object {
  "category": "cars",
  "event": "VAS_SHOW",
  "from": "new-lk-tab",
  "offerId": "1085562758-1970f439",
  "originalPrice": undefined,
  "price": 2199,
  "serviceId": "all_sale_activate",
}
`;

exports[`правильно рисует компонент если закончилась квота 1`] = `
<Modal
  animation={true}
  closer={true}
  contentClassName="OfferActivateDialog OfferActivateDialog_free_limit"
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="OfferActivateDialog__img"
  />
  <div
    className="OfferActivateDialog__title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Платное размещение",
      }
    }
  />
  <div
    className="OfferActivateDialog__text"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Вы&nbsp;уже истратили все бесплатные объявления и&nbsp;теперь можете размещаться только платно. Срок размещения — 60 дней. ",
        }
      }
    />
  </div>
  <Button
    className="OfferActivateDialog__button"
    color="blue"
    onClick={[Function]}
    size="xl"
    type="button"
    width="full"
  >
    <Price
      currency="RUR"
      free="Разместить бесплатно"
      postfix=""
      prefix="Разместить за "
      price={2199}
      separator=" "
    />
  </Button>
</Modal>
`;

exports[`правильно рисует компонент если машинка попала под условия первого платного размещения 1`] = `
<Modal
  animation={true}
  closer={true}
  contentClassName="OfferActivateDialog OfferActivateDialog_paid_group"
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="OfferActivateDialog__img"
  />
  <div
    className="OfferActivateDialog__title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Платное размещение",
      }
    }
  />
  <div
    className="OfferActivateDialog__text"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Такие автомобили продаются на&nbsp;Авто.ру в&nbsp;3-4 раза быстрее, чем на&nbsp;других сайтах, поэтому размещение данного объявления платное. Срок размещения — 60 дней. ",
        }
      }
    />
  </div>
  <Button
    className="OfferActivateDialog__button"
    color="blue"
    onClick={[Function]}
    size="xl"
    type="button"
    width="full"
  >
    <Price
      currency="RUR"
      free="Разместить бесплатно"
      postfix=""
      prefix="Разместить за "
      price={2199}
      separator=" "
    />
  </Button>
</Modal>
`;

exports[`правильно рисует компонент если машинка премиальная 1`] = `
<Modal
  animation={true}
  closer={true}
  contentClassName="OfferActivateDialog OfferActivateDialog_premium"
  onRequestHide={[Function]}
  visible={true}
  zIndexGroupLevel={20}
>
  <div
    className="OfferActivateDialog__img"
  />
  <div
    className="OfferActivateDialog__title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Премиум авто",
      }
    }
  />
  <div
    className="OfferActivateDialog__text"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Автомобили из&nbsp;премиального ценового сегмента продаются на&nbsp;Авто.ру в&nbsp;3-4 раза быстрее, чем на&nbsp;других сайтах, поэтому размещение данного объявления платное. Срок размещения — 60 дней. ",
        }
      }
    />
  </div>
  <Button
    className="OfferActivateDialog__button"
    color="blue"
    onClick={[Function]}
    size="xl"
    type="button"
    width="full"
  >
    <Price
      currency="RUR"
      free="Разместить бесплатно"
      postfix=""
      prefix="Разместить за "
      price={2199}
      separator=" "
    />
  </Button>
</Modal>
`;

exports[`при клике на кнопку передаст правильные параметры в модал оплаты 1`] = `
Object {
  "categoryId": "15",
  "from": "new-lk-tab",
  "isOpened": true,
  "saleId": "1087773242",
  "services": Array [
    "all_sale_activate",
  ],
  "updateOffer": Object {
    "category": "cars",
    "offerID": "1087773242-29c35944",
    "shouldUnfold": true,
  },
}
`;

exports[`при клике на кнопку правильно залогирует событие клика 1`] = `
Object {
  "category": "cars",
  "event": "VAS_CLICK",
  "from": "new-lk-tab",
  "offerId": "1085562758-1970f439",
  "originalPrice": undefined,
  "price": 2199,
  "serviceId": "all_sale_activate",
}
`;
